glx/testdata/invalid/invalid-assertion-properties/persons/person-father.glx
persons:
  person-father:
    properties:
      name:
        value: "Robert Thompson"
        fields:
          given: "Robert"
          surname: "Thompson"
      gender: male
